grammar.txt
PROGRAM -> FUNCTION* END
FUNCTION -> ident '(' PARAMS? ')' ':' type '=' '>' STATEMENT
PARAMS -> OPERAND (',' OPERAND)*
OPERAND -> ident: type

STATEMENT -> letStatement | reassignStatement | returnStatement | expressionStatement | blockStatement
block -> '{' STATEMENT* '}'
letStatement -> 'let' ident ':' type '=' expression ';'
reassignStatement -> ident '=' expression ';'
returnStatement -> 'ret' expression ';'
ifStatement -> 'if' expression blockStatement ('else' (blockStatement | ifStatement))?
expressionStatement -> expression ';'

expression -> comparison
comparison -> additive ( ('==' | '!=' | '<' | '>' | '<=' | '>=') additive)?
additive -> term ('+' term | '-' term)*
term -> number | ident | callExpression | '"' str '"' | 'true' | 'false'
callExpression -> ident '(' ARGS? ')' 
ARGS -> expression (',' expression)*



number -> [0-9][0-9]*
ident -> [a-z | A-Z]+[0-9]*
type -> 'i32' | 'bool' | 'string'
